--- a/css/site.css
+++ b/css/site.css
@@ -22,3 +22,24 @@ body {
  margin: 20px 0;
  padding: 5px;
 }
+
+#main label {
+ font-weight: bold;
+}
+
+#main input[type=text],
+#main select,
+#main input[type=password],
+#main textarea
+{
+ width: 150px;
+}
+
+#main input[type=submit] {
+ background-color: green;
+ color: white;
+ border-radius: 15px;
+ padding: 3px;
+ margin-top: 5px;
+ margin: 5px;
+}
