--- a/css/site.css
+++ b/css/site.css
@@ -37,6 +37,9 @@ html, body {
 .simple-form {
  padding: 2px;
  width: 300px;
+ /*position: absolute;
+ bottom: 5px;
+ right: 5px; */
 }
 
 .simple-form label {
