--- a/css/site.css
+++ b/css/site.css
@@ -16,6 +16,10 @@ body {
  background-color: darkgreen;
 }
 
+a {
+ color: green;
+}
+
 html, body {
  padding: 0;
  margin: 0;
@@ -76,4 +80,14 @@ html, body {
  margin: 0 auto;
  background-color: white;
  padding: 5px;
+}
+
+header nav {
+ float: right;
+ margin-right: 5px;
+}
+
+header nav li {
+ display: inline;
+ font-size: 12px;
 }
